Closed Bug 668479 Opened 15 years ago Closed 15 years ago

TM: Assertion failure: fp->hasCallObj(), at jsfun.cpp:248

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla8

People

(Reporter: decoder, Assigned: luke)

Details

(Keywords: assertion, testcase, Whiteboard: [inbound])

Attachments

(1 file)

The following test asserts on TM revision c2e5e424e6c3 (run with options -j -m): function a() { with(a) eval("arguments[0]"); } a(); This could be related to 643543 (which is not only in TI) but according to the tests I assume that this is a different defect.
Attached patch fix old assertSplinter Review
This assert is from back before bug 539144 back when hasArgsObj was true for eval frames (now its only true for the frame that owns the args obj). This patch updates the assert and the comment.
Assignee: general → luke
Status: NEW → ASSIGNED
Attachment #543164 - Flags: review?
Attachment #543164 - Flags: review? → review?(jwalden+bmo)
Comment on attachment 543164 [details] [diff] [review] fix old assert One from the vaults!
Attachment #543164 - Flags: review?(jwalden+bmo) → review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla8
A testcase for this bug was automatically identified at js/src/jit-test/tests/basic/testBug668479.js.
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: