Bug 668479 - Fixup old assert concerning arguments object (r=waldo)